--- a/index.html
+++ b/index.html
@@ -187,9 +187,29 @@
 
     <div class="container">
         <div class="projects-grid">
-            <!-- Project 1 -->
+            <!-- Project 1: CrewAI Framework -->
             <div class="project-card">
-                <h3>OpenClaw 助手</h3>
+                <h3>🤖 CrewAI Framework</h3>
+                <p>极简多智能体协作框架，支持 Agent/Task/Crew 编排。内置金融分析、市场监控等应用模板。</p>
+                <div class="tech-stack">
+                    <span class="tech-tag">Python</span>
+                    <span class="tech-tag">CrewAI</span>
+                    <span class="tech-tag">Multi-Agent</span>
+                    <span class="tech-tag">Qwen API</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://github.com/jonah791/qwen-crewai" class="project-link" target="_blank">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
+                        </svg>
+                        GitHub
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 2: OpenClaw Assistant -->
+            <div class="project-card">
+                <h3>🦞 OpenClaw 助手</h3>
                 <p>个人 AI 助手平台，支持多种消息渠道，可接入阿里云百炼模型。自动化日常任务，管理记忆系统。</p>
                 <div class="tech-stack">
                     <span class="tech-tag">Node.js</span>
@@ -198,19 +218,11 @@
                     <span class="tech-tag">Automation</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="project-link">
+                    <a href="https://github.com/jonah791/openclaw" class="project-link" target="_blank">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
                         </svg>
                         GitHub
-                    </a>
-                    <a href="#" class="project-link">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
-                            <polyline points="15 3 21 3 21 9"/>
-                            <line x1="10" y1="14" x2="21" y2="3"/>
-                        </svg>
-                        Demo
                     </a>
                 </div>
             </div>
